# lite_switch

./: .gitignore  .gitmodules  DEVELOPMENT.md  PROJECT_OUTLINE.md  README.md  build.sh
cmake/: aggregate.cmake  comp_base.cmake
middleware/: CMakeLists.txt
middleware/include/: middleware.h
middleware/src/: middleware.c
modules/: CMakeLists.txt
modules/1.UI/: CMakeLists.txt
modules/1.UI/1.Web/: CMakeLists.txt  main.c
modules/3.PD/: CMakeLists.txt
modules/3.PD/3.test/publisher/: CMakeLists.txt  main.c
modules/3.PD/3.test/receiver/: CMakeLists.txt  main.c
modules/3.PD/3.test/scanner/: CMakeLists.txt  main.c
modules/3.PD/4.SDA/: CMakeLists.txt  main.c
modules/3.PD/4.SDA/event/: CMakeLists.txt  SDA_EVENT_DESIGN.md  sda_event.c  sda_event.h  sda_event_sim.c  sda_event_sim.h
modules/3.PD/4.SDA/include/: sda_core.h
modules/3.PD/4.SDA/init/: sdk_init.c  sdk_init.h
modules/3.PD/4.SDA/intf/: intf_api.c  intf_api.h  intf_cb.c  intf_cb.h  intf_event.c  intf_event.h
protocol/: CMakeLists.txt  README.md  gen_proto_registry.sh
protocol/cli/: CMakeLists.txt  build_redis_cli.sh  cli_proto.c  cli_proto.h  patch_redis_cli.py
protocol/proto/PD/interface/: interface.proto
protocol/proto/test/: test.proto
scripts/: check_deps.sh  install_deps.sh
